# DW_Decomp

./: Aux.h  CMakeLists.txt  DW_Decomp.cpp  DW_Decomp.h  MNFP_Inst.cpp  MNFP_Inst.h  P-n40-k5_log.txt  WriteCommitTo_h.sh  axleWeights.txt  main.cpp  oroloc3D.csv  oroloc3DCP.csv  result (1).csv  result.csv  rmBuild.sh  rmCmake.sh
2L_SDVRP/: CMakeLists.txt
2L_SDVRP/Instances/Oroloc3D/: CreateInstance.py  README.md  S10_240T.oroloc3D  S10_240T_items - cópia.csv  S10_240T_sol_items.csv  S10_240T_sol_orders.csv  S20_288T.oroloc3D  S20_288T_items.csv  S20_288T_sol_items.csv  S20_288T_sol_orders.csv  S30_288T.oroloc3D  S30_288T_items.csv  S30_288T_sol_items.csv  S30_288T_sol_orders.csv  S40_336T.oroloc3D  S40_336T_items.csv  S40_336T_sol_items.csv  S40_336T_sol_orders.csv  S50_360T.oroloc3D  S50_360T_items.csv  S50_360T_sol_items.csv  S50_360T_sol_orders.csv  S60_360T.oroloc3D  S60_360T_items.csv  S60_360T_sol_items.csv  S60_360T_sol_orders.csv  S70_384T.oroloc3D  S70_384T_items.csv  S70_384T_sol_items.csv  S70_384T_sol_orders.csv  S80_408T.oroloc3D  S80_408T_items.csv  S80_408T_sol_items.csv  S80_408T_sol_orders.csv  S90_432T.oroloc3D  S90_432T_items.csv  S90_432T_sol_items.csv  S90_432T_sol_orders.csv  S96_456T.oroloc3D  S96_456T_items.csv  (+8 more)
2L_SDVRP/Instances/Oroloc3D/Sol/: S20_240T_CP.txt
2L_SDVRP/Instances/Oroloc3D_2/instances/: S10_240T.txt  S20_288T.txt  S30_288T.txt  S40_336T.txt  S50_360T.txt  S60_360T.txt  S70_384T.txt  S80_408T.txt  S90_432T.txt  S96_456T.txt  S99_480T.txt
2L_SDVRP/Instances/Oroloc3D_2/solutions/: S10_240T.txt  S20_288T.txt  S30_288T.txt  S40_336T.txt  S50_360T.txt  S60_360T.txt  S70_384T.txt  S80_408T.txt  S90_432T.txt  S96_456T.txt  S99_480T.txt
2L_SDVRP/include/: AuxT.h  AxleWeights.h  BP_MIP_1D.h  BinPackingCP.h  BuscaLocal.h  CPSolverParameters.h  Commit.h  Constantes.h  ConstrutivoBin.h  Container.h  IBM_CpOptimizer.h  InputOutput.h  Instancia.h  LoadingChecker.h  MILP.h  OPP_CP_3D.h  ProblemParameters.h  SCIP.h  Solucao.h  TesteOroloc3D.h  safe_matrix.h  safe_vector.h  sefe_array.h
2L_SDVRP/src/: AxleWeights.cpp  BinPackingCP.cpp  BuscaLocal.cpp  Construtivo.cpp  ConstrutivoBin.cpp  Container.cpp  IBM_CpOptimizer.cpp  Ig.cpp  InputOutput.cpp  InputOutput.sync-conflict-20260212-175522-A5OFAWR.cpp  Instancia.cpp  LoadingChecker.cpp  MILP.cpp  OPP_CP_3D.cpp  SCIP.cpp  Solucao.cpp  TesteOroloc3D.cpp
2L_SDVRP_MILP_Main/: CMakeLists.txt
2L_SDVRP_MILP_Main/src/: main.cpp
2L_SDVRP_Main/: CMakeLists.txt
2L_SDVRP_Main/src/: main.cpp
CvrpSep/: CMakeLists.txt  corte (copiar 1).cpp  corte.c  corte.cpp  libtool
CvrpSep/src/: memmod.h  mxf.c  sort.c
DW_Decomp/: .directory  CMakeLists.txt  todo.h
DW_Decomp/include/: Alarm.h  Aux.h  Branch.h  BranchAndPrice.h  DW_Decomp.h  PrimalHeuristic.h  SearchStrategy.h  Sparse.h  SparseMat.h  SparseOp.h  Statistics.h  safe_3D_matrix.h  safe_matrix.h  safe_vector.h
DW_Decomp/src/: Branch.cpp  BranchAndPrice.cpp  DW_Decomp.cpp  PrimalHeuristic.cpp  SearchStrategy.cpp  __DW_Decomp__CP_28_08.cpp
Grafo/: CMakeLists.txt
Grafo/include/: GAux.h  Grafo.h
Grafo/src/: Grafo.cpp
Instances/: CMakeLists.txt
Instances/cmake/: FindGUROBI.cmake
Instances/include/: InstanceVRPTW.h
Instances/src/: InstanceVRPTW.cpp
Mnfp/: CMakeLists.txt
Mnfp/include/: MNFP_Inst.h  MnfpDecomp.h
Mnfp/src/: MNFP_Inst.cpp  MnfpDecomp.cpp  main.cpp
Plot/: items.txt  plot3d.py  projXY.py
SparseTeste/: CMakeLists.txt
SparseTeste/src/: main.cpp
VRPTW/: CMakeLists.txt
VRPTW/Instancias/P/: P-n16-k8.sol
VRPTW/Resultados/: result.ots
VRPTW/include/: .LabelingAlgorithm.h.swp  Cvrp_DecompLabeling.h  Instancia.h  Label.h  LabelingAlgorithm.h  LabelingConstants.h  LabelingUtils.h  LowerBound.h  MemoryPool.h  NgSet.h  Test.h  VrpTW_Decomp.h  VrpTW_DecompLabeling.h
VRPTW/src/: Cvrp_DecompLabeling.cpp  Duvidas.txt  Instancia.cpp  Label.cpp  LabelingAlgorithm.cpp  LabelingUtils.cpp  LowerBound.cpp  Test.cpp  VrpTW_Decomp.cpp  VrpTW_DecompLabeling.cpp  main.cpp  teste.cxx  teste.ixx
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  include-directories-2L_SDVRP.txt  include-directories-Grafo.txt  include-directories-Instances.txt  include-directories.txt
cmake/2L_SDVRP/: Makefile  cmake_install.cmake  lib2L_SDVRP.dylib
cmake/2L_SDVRP_Main/: 2L_SDVRP_Main  Makefile  cmake_install.cmake
cmake/CvrpSep/: Makefile  cmake_install.cmake
cmake/DW_Decomp/: Makefile  cmake_install.cmake  libDwDecomp.dylib
cmake/Grafo/: Makefile  cmake_install.cmake
cmake/Instances/: Makefile  cmake_install.cmake  libInstances.dylib
cmake/SparseTeste/: Makefile  SparseTeste  cmake_install.cmake
cmake/VRPTW/: Makefile  Vrptw  cmake_install.cmake
install/include/DwDecomp/: DW_Decomp.h
